@@ -146,7 +146,7 @@
 </head>
 <body>
 <h1>Plotscripting Dictionary</h1>
-<h2>For the current OHRRPGCE work-in-progress version (2018-10-27)</h2>
+<h2>For the current OHRRPGCE work-in-progress version (2019-03-07)</h2>
 <p>This is the documentation for all <a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting">plotscripting</a> commands.
 				In addition to reading this document, we also recommend you check out the
 				<a href="https://rpg.hamsterrepublic.com/ohrrpgce/Plotscripting_Tutorial">Plotscripting Tutorial</a>
@@ -970,6 +970,9 @@
 		<a href="#about-findcollidingslice">find colliding slice (parent, slice, number, check descendants, visible only)</a><br>
 		
 	
+		<a href="#about-findcolor">find color (r, g, b, searchstart)</a><br>
+		
+	
 		<a href="#about-findenemyinformation">find enemy in formation (formation, enemy id, copy number)</a><br>
 		
 	
@@ -995,6 +998,9 @@
 		
 	
 		<a href="#about-firstgridchild">first grid child(handle)</a><br>
+		
+	
+		<a href="#about-firstlinechild">first line child(handle)</a><br>
 		
 	
 		<a href="#about-firstmenuitem">first menu item(menu handle)</a><br>
@@ -1397,6 +1403,9 @@
 		
 	
 		<a href="#about-getscrollcheckdepth">get scroll check depth (handle)</a><br>
+		
+	
+		<a href="#about-getselectedchild">get selected child (handle)</a><br>
 		
 	
 		<a href="#about-getselectsliceindex">get select slice index (handle)</a><br>
@@ -1858,6 +1867,9 @@
 		<a href="#about-nextgridsibling">next grid sibling(handle)</a><br>
 		
 	
+		<a href="#about-nextlinesibling">next line sibling(handle)</a><br>
+		
+	
 		<a href="#about-nextmenu">next menu(menu handle)</a><br>
 		
 	
@@ -2241,6 +2253,9 @@
 	
 		
 		<a href="#about-resumerandomenemies">resume random enemys</a><br>
+	
+		
+		<a href="#about-resumeboxadvance">resume textbox controls</a><br>
 	
 		<a href="#about-resumetimers">resume timers</a><br>
 		
@@ -2701,6 +2716,9 @@
 		<a href="#about-setsecondssofplay">set seconds of play (sec)</a><br>
 		
 	
+		<a href="#about-setselectedchild">set selected child (select, child)</a><br>
+		
+	
 		<a href="#about-setselectsliceindex">set select slice index (handle, index)</a><br>
 		
 	
@@ -3088,6 +3106,9 @@
 		
 		<a href="#about-suspendrandomenemies">suspend random enemys</a><br>
 	
+		
+		<a href="#about-suspendboxadvance">suspend textbox controls</a><br>
+	
 		<a href="#about-suspendtimers">suspend timers</a><br>
 		
 	
@@ -3135,6 +3156,9 @@
 	
 		<a href="#about-teleporttomap">teleport to map (map, x, y)</a><br>
 		
+	
+		
+		<a href="#about-boxadvanceissuspended">textbox controls are suspended</a><br>
 	
 		<a href="#about-textboxline">textbox line (string ID, textbox, line, expand, strip)</a><br>
 		
@@ -4195,7 +4219,14 @@ advance text box # "hit spacebar"</pre>
 <a name="about-waitfortextbox"></a>
 		<h4>wait for text box</h4>
 <p>
-			Makes the script wait until there is no text box displaying on the screen. Useful to know when to move on after using a <a href="#about-showtextbox" class="ref">show text box</a> command.
+			
+				Makes the script wait until there is no text box displaying on the screen.
+				Useful to know when to move on after using a <a href="#about-showtextbox" class="ref">show text box</a> command.
+				<div style="background-color:#CCB;" class="notice">
+<img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/d/dc/Plotwarn.png" alt="[Warning]" class="icon">
+					<span class="code">wait for text box</span> doesn't wait if <a href="#about-suspendboxadvance" class="ref">suspend box advance</a> has been used, because it's impossible for the player to advance the textbox!
+				</div>
+			
 			
 			<pre>show text box(2) # Show a text box
 wait for text box # wait until the player continues</pre>
@@ -4751,16 +4782,28 @@ resume random enemies # back to normal</pre>
 <a name="about-suspendboxadvance"></a>
 		<h4>suspend box advance</h4>
 <p>
-			Prevents the player from advancing or clearing text boxes by pressing keys. While this is active, the only way to make a text box advance is with the <a href="#about-advancetextbox" class="ref">advance text box</a> command (or <a href="#about-showtextbox" class="ref">show text box</a>). Useful for cut scenes that play out like a movie, where the player just watches the dialogue unfold. Be very careful with this command, since you do not want to leave the player stuck on a text box forever.
+			
+				Prevents the player from advancing or clearing text boxes by pressing keys, or moving the cursor in choice boxes. In other words, suspends text box controls. While this is active, the only way to make a text box advance is with the <a href="#about-advancetextbox" class="ref">advance text box</a> command (or <a href="#about-showtextbox" class="ref">show text box</a>) or using the "Advance text box when menu closes" menu bit. Useful for cut scenes that play out like a movie, where the player just watches the dialogue unfold. Be very careful with this command, since you do not want to leave the player stuck on a text box forever.
+				<div style="background-color:#CCB;" class="notice">
+<img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/d/dc/Plotwarn.png" alt="[Warning]" class="icon">
+					<a href="#about-waitfortextbox" class="ref">wait for text box</a> doesn't wait while <span class="code">suspend box advance</span> is active!
+				</div>
+			
 			
 			<pre>suspend box advance # stop players from mucking things up
-show text box(2) # Show a text box
-wait(45) # Wait about 3 seconds
-advance text box # "hit spacebar"
+show text box(2)   # Show a text box
+wait(45)           # Wait about 3 seconds
+advance text box   # Next text box. Maybe it ends with "Press USE key to continue"
 resume box advance # go back to normal</pre>
 			
 		</p>
 </div>
+		<div class="command">
+<a name="about-suspendtextboxcontrols"></a>
+		
+				<h4>suspend textbox controls</h4>
+				See <a href="#about-suspendboxadvance">suspend box advance</a>
+			</div>
 		<div class="command">
 <a name="about-resumeboxadvance"></a>
 		<h4>resume box advance</h4>
@@ -4768,23 +4811,35 @@ resume box advance # go back to normal</pre>
 			Undoes the <a href="#about-suspendboxadvance" class="ref">suspend box advance</a> command and allows the player to advance and clear text boxes by pressing keys as normal.
 			
 			<pre>suspend box advance # stop players from mucking things up
-show text box(2) # Show a text box
-wait(45) # Wait about 3 seconds
-advance text box # "hit spacebar"
+show text box(2)   # Show a text box
+wait(45)           # Wait about 3 seconds
+advance text box   # Next text box. Maybe it ends with "Press USE key to continue"
 resume box advance # go back to normal</pre>
 			
 		</p>
 </div>
 		<div class="command">
+<a name="about-resumetextboxcontrols"></a>
+		
+				<h4>resume textbox controls</h4>
+				See <a href="#about-resumeboxadvance">resume box advance</a>
+			</div>
+		<div class="command">
 <a name="about-boxadvanceissuspended"></a>
 		<h4>box advance is suspended</h4>
 <p>
-			Returns true if <a href="#about-suspendboxadvance" class="ref">suspend box advance</a> is active.
+			Returns true if <a href="#about-suspendboxadvance" class="ref">suspend box advance</a> (aka <a href="#about-suspendboxadvance" class="ref">suspend textbox controls</a>) is active.
 			
 			
 			
 		</p>
 </div>
+		<div class="command">
+<a name="about-textboxcontrolsaresuspended"></a>
+		
+				<h4>textbox controls are suspended</h4>
+				See <a href="#about-boxadvanceissuspended">box advance is suspended</a>
+			</div>
 		<div class="command">
 <a name="about-suspendoverlay"></a>
 		<h4>suspend overlay</h4>
@@ -6010,9 +6065,9 @@ wait for text box # wait until the player continues</pre>
 			Advances a text box just as if the player had pressed a key. For use while <a href="#about-suspendboxadvance" class="ref">suspend box advance</a> is active.
 			
 			<pre>suspend box advance # stop players from mucking things up
-show text box(2) # Show a text box
-wait(45) # Wait about 3 seconds
-advance text box # "hit spacebar"
+show text box(2)   # Show a text box
+wait(45)           # Wait about 3 seconds
+advance text box   # Next text box. Maybe it ends with "Press USE key to continue"
 resume box advance # go back to normal</pre>
 			
 		</p>
@@ -7444,6 +7499,27 @@ gain hero stat(who, stat:mp, 0)</pre>
 		</p>
 </div>
 		<div class="command">
+<a name="about-findcolor"></a>
+		<h4>find color (r, g, b, searchstart)</h4>
+<p>
+			
+				Searches the master palette for the color most similar to the given <span class="param">r</span>, <span class="param">g</span>, <span class="param">b</span>
+				triple and returns its index, from 0 to 255.
+				The color is selected using an approximate perceptual distance function.
+				<br>
+				<span class="param">r</span>, <span class="param">g</span>, <span class="param">b</span> should be in the range 0-255
+				(but out-of-bounds values are allowed, which weights those colors even more heavily).
+				The <span class="param">searchstart</span> argument is optional, and defaults to 0.
+				It says how many colors at the beginning of the palette to ignore.
+				For example, if <span class="param">searchstart</span> is 1, then color 0 will never be returned,
+				which is useful because 0 is often used as the transparent color.
+			
+			
+			
+			
+		</p>
+</div>
+		<div class="command">
 <a name="about-rgb"></a>
 		<h4>RGB (red, green, blue)</h4>
 <p>
@@ -8350,6 +8426,13 @@ end</pre>
 <img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">The <span class="param">map cure</span> command replaces the old command <span class="param">outside battle cure</span> which had a bug which required you to use <span class="param">atk:name -- 1</span> instead of <span class="param">atk:name</span> for the <span class="param">attack</span> argument.</div>
 			<div style="background-color:#BCC;" class="notice">
 <img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">If the attack results in all the heroes in the party being dead (outside of battles a hero isn't counted as dead if their maximum HP is zero or negative), a normal game over occurs: the game over script is run if there is one, otherwise the game ends. However the game over won't happen until the next wait command (such as <a href="#about-wait" class="ref">wait</a>).</div>
+			<div style="background-color:#BCC;" class="notice">
+<img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">
+				If you want to cure a hero that has 0 HP with an attack, then the attack's Target Class
+				needs to be set to something that allows targetting dead heroes.
+				Otherwise the attack doesn't happen and this command returns <span class="code">false</span>.
+				Other Target settings, including "Spread Attack", are ignored.
+			</div>
 			
 			
 			
@@ -9525,7 +9608,7 @@ end
 			
 				Returns <a href="#about-booleanconstants" class="ref">true</a> or <a href="#about-booleanconstants" class="ref">false</a> depending on whether button
 				#<span class="param">button</span> on joystick #<span class="param">joystick</span> is pressed.
-				<span class="param">button</span> can be from 1-16 (assuming the joystick has that many buttons),
+				<span class="param">button</span> can be from 1-32 (assuming the joystick has that many buttons),
 				and <span class="param">joystick</span> can be from 0-7.
 				Most of the time, you will want to use joystick #0,
 				so that is what <span class="param">joystick</span> defaults to.
@@ -12157,6 +12240,7 @@ lookup slice(sl:virtual keyboard entrytext)
 lookup slice(sl:virtual keyboard del)
 lookup slice(sl:virtual keyboard enter)
 lookup slice(sl:shop buy info panel)
+lookup slice(sl:status hide if no hp)
 lookup slice(sl:pathfind dest display)
 </pre>
 			<div class="seealso">See also: <ul>
@@ -14005,6 +14089,30 @@ end
 			
 		</p>
 </div>
+		<div class="command">
+<a name="about-firstlinechild"></a>
+		<h4>first line child(handle)</h4>
+<p>
+			
+				An alias for <a href="#about-firstchildoftype" class="ref">first child of type</a><span class="code">(handle, slicetype:line)</span>.
+			
+			
+			
+			
+		</p>
+</div>
+		<div class="command">
+<a name="about-nextlinesibling"></a>
+		<h4>next line sibling(handle)</h4>
+<p>
+			
+				An alias for <a href="#about-nextsiblingoftype" class="ref">next sibling of type</a><span class="code">(handle, slicetype:line)</span>.
+			
+			
+			
+			
+		</p>
+</div>
 		<hr>
 		</div>
 		<div class="subsection">
@@ -14329,7 +14437,7 @@ end
 				<div style="background-color:#BCC;" class="notice">
 <img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">
 					There are two types of slice used by the engine for which there are no commands:
-					'special' slices (like <a href="#sprite%20layer" class="undef">sprite layer</a>),
+					'special' slices (such as <a href="#sprite%20layer" class="undef">sprite layer</a>),
 					and 'map' slices (which are map layers).
 					However you can use <a href="#about-lookupslice" class="ref">lookup slice</a> to find each instance of these.
 					Special slices are nothing but container slices with special purposes (but not special behaviour).
@@ -14359,11 +14467,12 @@ end
 				<span class="code">slicetype:Special</span>,
 				<span class="code">slicetype:Container</span>,
 				<span class="code">slicetype:Rect</span>,
+				<span class="code">slicetype:Line</span>,
+				<span class="code">slicetype:Ellipse</span>,
 				<span class="code">slicetype:Sprite</span>,
 				<span class="code">slicetype:Text</span>,
 				<span class="code">slicetype:Map</span>,
 				<span class="code">slicetype:Grid</span>,
-				<span class="code">slicetype:Ellipse</span>,
 				<span class="code">slicetype:Scroll</span>,
 				<span class="code">slicetype:Select</span>,
 				<span class="code">slicetype:Panel</span>,
@@ -16094,6 +16203,10 @@ The third argument is the total number of ticks that the animation should run. Y
 		<h4>set select slice index (handle, index)</h4>
 <p>
 			Changes the currently selected (visible) child of a select slice. The first argument is the handle of the select slice. The second argument is the index number of the child slice (not a handle or a lookup code!) this will be 0 for the first child, 1 for the second child, 2 for the third child, and so-on. An invalid index number means no child slices will be visible at all.
+				<br>
+				Use <a href="#about-setselectedchild" class="ref">set selected child</a> instead if you want to set the selected child
+				by its slice handles instead of index.
+			
 			
 			
 			<div class="seealso">See also: <ul><li><a href="#about-getselectsliceindex" class="ref">get select slice index</a></li></ul>
@@ -16105,10 +16218,45 @@ The third argument is the total number of ticks that the animation should run. Y
 		<h4>get select slice index (handle)</h4>
 <p>
 			Returns the index number of the currently selected (visible) child of a select slice. The first argument is the handle of the select slice. The return value the index number of the child slice (not a handle or a lookup code!) this will be 0 for the first child, 1 for the second child, 2 for the third child, and so-on.
+				<br>
+				Use <a href="#about-getselectedchild" class="ref">get selected child</a> instead if you want a slice handle for
+				the selected child instead of its index.
+			
 			
 			
 			<div class="seealso">See also: <ul><li><a href="#about-setselectsliceindex" class="ref">set select slice index</a></li></ul>
 </div>
+		</p>
+</div>
+		<div class="command">
+<a name="about-setselectedchild"></a>
+		<h4>set selected child (select, child)</h4>
+<p>
+			
+				Given a select slice handle <span class="param">select</span> and a slice handle for one of its
+				children, <span class="param">child</span>, selects that child.
+				<br>
+				This is just a convenience wrapper around <a href="#about-setselectsliceindex" class="ref">set select slice index</a>.
+			
+			
+			
+			
+		</p>
+</div>
+		<div class="command">
+<a name="about-getselectedchild"></a>
+		<h4>get selected child (handle)</h4>
+<p>
+			
+				Given a select slice <span class="param">handle</span>, returned the slice handle of the currently selected child.
+				Returns <span class="code">false</span>/0 if the selected index is out of range
+				(including when slice has no children).
+				<br>
+				This is just a convenience wrapper around <a href="#about-getselectsliceindex" class="ref">get select slice index</a>.
+			
+			
+			
+			
 		</p>
 </div>
 		<hr>
@@ -19229,6 +19377,9 @@ joy:button 2
 joy:button 3
 ...
 joy:button 16
+joy:button 17      # Warning: joy:button17 is not joy:button16+1! All other button codes are consecutive
+...
+joy:button 32
 joy:x left
 joy:x right
 joy:y up
@@ -19253,6 +19404,14 @@ run key            # Esc or Tab, or Run button on any joystick (Hold to run from
 <img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">
 					Previously it was necessary to <span class="code">include, scancode.hsi</span>
 					to use the <span class="code">key:</span> constants, but no longer.
+				</div>
+				<div style="background-color:#BCC;" class="notice">
+<img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">
+					If the "Map joystick controls to keyboard keys for scripts" general preference
+					bitset is ON (which it is by default), then checking the
+					<span class="code">key:up</span>, <span class="code">key:down</span>, <span class="code">key:left</span>, <span class="code">key:right</span>,
+					<span class="code">key:esc</span>, <span class="code">key:enter</span> keys will report <span class="code">true</span>
+					if the corresponding button on any joystick is pressed.
 				</div>
 				<div style="background-color:#BCC;" class="notice">
 <img src="http://gilgamesh.hamsterrepublic.com/wiki/ohrrpgce-images/0/01/Plotnote.png" alt="[Notice]" class="icon">
@@ -19820,7 +19979,7 @@ run key            # Esc or Tab, or Run button on any joystick (Hold to run from
 			</div>
 		<hr>
 		</div>
-<p>Stats: There are 856 commands (of which 49 are aliases), 65 constants and 10 definitions of types and other terms in this file.</p>
+<p>Stats: There are 864 commands (of which 52 are aliases), 65 constants and 10 definitions of types and other terms in this file.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
