@@ -143,6 +143,7 @@ September 29 2018 [Fufluns]
     * "suspend/resume textbox controls" and "textbox controls are suspended" are
       aliases to "suspend/resume box advance" and "box advance is suspended"
     * "find color" [Ralph]
+    * "set selected child", "get selected child" (only for convenience) [Ralph]
 
   * Changes
     * "Previous attack" base ATK stat renamed to "Last damage by attacker"
